# Engineering-Thesis

./: .gitignore  README.md  platformio.ini
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: board.dart  board_data_record.dart  place.dart
app/lib/screens/: details_screen.dart  home_screen.dart  settings_screen.dart
app/lib/services/: api_service.dart  data_aggregator.dart  mock_data_service.dart
app/lib/utils/: mac_address_formatter.dart
app/lib/widgets/: board_card.dart  place_card.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
board/: platformio.ini
board/lib/wifi_functions/src/: data_send_logic.h  wifi_functions.cpp
board/src/: config.h.example  main.cpp
lib/crypto_functions/src/: crypto_functions.cpp  crypto_functions.h
lib/wifi_functions/src/: wifi_functions.cpp  wifi_functions.h
lib/wifi_functions/src/wifi_buffer/: wifi_buffer.cpp  wifi_buffer.h
server/: .env.example  Cargo.toml
server/src/: error.rs  main.rs
server/src/db/: mod.rs
server/src/model/: board.rs  board_data_record.rs  hello.rs
server/src/routes/: board_routes.rs  mod.rs
src/: config.h.example  error.rs  main.cpp  main.rs
src/model/: mod.rs
src/routes/: hello.rs  mod.rs
(+4 files in other folders)
