[package]
name = "inzynierka-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "2.0.0-rc.38", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "schema-sync",
  "entity-registry",
] }
dotenv = "0.15.0"
chrono = "0.4.44"
